--- a/css/common.css
+++ b/css/common.css
@@ -1,13 +1,3 @@
-.rotated {
-  transform: rotateY(90deg);
-}
-.hidden {
-    display: none;
-}
-
-.shown {
-  display: block; }
-
 html, body {
   padding: 0;
   margin: 0;
@@ -15,6 +5,15 @@ html, body {
   height: 100%;
   font-family: "Roboto", arial;
 }
+.rotated {
+  transform: rotateY(90deg);
+}
+.hidden {
+  display: none;
+}
+
+.shown {
+  display: block; }
 
 h1, h2, h3, h4, h5, p {
   padding: 0;
@@ -319,7 +318,8 @@ a {
     margin: 0 0 20px 0;
     font-size: 15px;
     color: #f1f1f1;
-    border-radius: 3px;
+    border: none;
+    border-radius: 2px;
     background-color: #6a6a6a;
     font-family: 'Roboto';
 }
@@ -451,18 +451,18 @@ tr:nth-child(even) {
 
 .checkbox-bordered {
     display: inline-block;
-    border: 1px solid lightgrey;
-    border-radius: 4px;
+    border-bottom: 1px solid #bfbfbf;
+        /*border-radius: 4px;*/
     /*background-color: pink;*/
     height: 20px;
-    padding: 5px 10px 5px 5px;
-    margin-right: 5px;
+    padding: 5px 0px 4px 0px;
+    margin-right: 15px;
 }
 
 /* BLUE FANCY BUTTON */
 .submit-btn {
   height: 34px;
-  width: 100px;
+  width: 120px;
   border: none;
   border-radius: 1px;
   background-color: #2266f0;
@@ -504,6 +504,90 @@ tr:nth-child(even) {
 }
 /* . . . . */
 
+.filter-text.groups {
+    margin-top: 40px;
+}
+
+
+.groups-transfer {
+    display: inline-block;
+    background-color: #fbf5d4;
+    color: #8a6d3b;
+    padding: 15px;
+    border-radius: 4px;
+    border-bottom: 1px solid #edd8b2;
+    width: 95%;
+}
+
+.groups-transfer-inner {
+    margin: 10px 0px 10px 20px;
+    width: 85%;
+    display: none;
+}
+
+.groups-transfer button, .groups-transfer select {
+    border: 1px solid #edd8b2;
+    padding: 4px 8px 4px 8px;
+    background-color: white;
+    height: 26px;
+    margin-right: 10px;
+    /**/
+}
+.groups-transfer button:nth-of-type(2):hover {
+    cursor: pointer;
+    background-color: #e6980e;
+}
+
+.groups-transfer button:nth-of-type(2) {
+    background-color: #f1b549;
+    border: none;
+    color: white;
+}
+
+
+.word-order {
+    background-color: #63acda;
+    display: inline-block;
+    width: 130px;
+    height: 150px;
+    text-align: center;
+    margin-right: 25px;
+    border-radius: 3px;
+}
+.word-order:hover {
+    box-shadow: 5px 5px 10px -5px grey;
+}
+
+.word-order span {
+    background-color: #0b5f9c;
+    display: block;
+    width: 130px;
+    height: 40px;
+    padding: 5px 0 5px 0;
+    position: relative;
+    top: 100px;
+    color: white;
+}
+
+.btn {
+    border: none;
+    border-radius: 4px;
+    background-color: white;
+    min-width: 70px;
+    padding: 7px 2px 7px 2px;
+    background-color: #597aef;
+    color: white;
+}
+
+div.groupInner {
+    display: none;
+}
+div.groupInner.active {
+    display: block;
+}
+
+
+
 
 
 
@@ -521,5 +605,51 @@ tr:nth-child(even) {
     }
     .body-panels-individ a {
         width: 50%;
+    }
+}
+
+@media screen and (max-width: 870px) {
+    .body-container {
+        width: 700px;
+    }
+    .bdpi-inners {
+        margin: 0px;
+        position: relative;
+        right: 35%;
+        top: 50%;
+        transform: translate(75%, -50%);
+    }
+
+    .body-panels {
+        height: auto;
+        width: 90%;
+    }
+
+    .body-panels-individ {
+        width: 35%;
+        margin-right: 0%;
+        margin-left: 4%;
+    }
+    .body-panels-individ:nth-of-type(1) {
+        margin-left: 0%;
+    }
+    .body-panels-individ:nth-of-type(3) {
+        margin-left: 0%;
+    }
+    .body-panels-individ:nth-of-type(3),.body-panels-individ:nth-of-type(4)  {
+        margin-top: 20px;
+    }
+
+    .body-panels-individ a {
+        width: 50%;
+    }
+    .body-panels-individ img {
+        width: 60px;
+        height: 60px;
+        display: block;
+        margin: 0 auto;
+        margin-top: 20px;
+        /*border-radius: 3px 0px 0px 3px;*/
+        border-radius: 0;
     }
 }
